@@ -19,6 +19,7 @@
 package org.mycore.orcid.oauth;
 
 import java.io.IOException;
+import java.io.Serial;
 import java.net.URISyntaxException;
 
 import org.apache.logging.log4j.LogManager;
@@ -51,6 +52,7 @@ import jakarta.servlet.http.HttpServletResponse;
  */
 public class MCROAuthServlet extends MCRServlet {
 
+    @Serial
     private static final long serialVersionUID = 1L;
 
     private static final Logger LOGGER = LogManager.getLogger(MCROAuthServlet.class);
@@ -71,9 +73,9 @@ public class MCROAuthServlet extends MCRServlet {
         String code = job.getRequest().getParameter("code");
         String error = job.getRequest().getParameter("error");
 
-        if ((error != null) && !error.trim().isEmpty()) {
+        if (error != null && !error.isBlank()) {
             job.getResponse().sendRedirect(userProfileURL + "&XSL.error=" + error);
-        } else if ((code == null) || code.trim().isEmpty()) {
+        } else if (code == null || code.isBlank()) {
             redirectToGetAuthorization(job);
         } else {
             String state = job.getRequest().getParameter("state");
